syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "ioDeviceEmulator.Shared";

package ProtoWeatherForecast;

service ProtoWeatherForecastService {

	rpc GetProtoWeatherForecast (google.protobuf.Empty) returns (ProtoWeatherForecastResponse);

	rpc GetProtoStreamWeatherFrocast (google.protobuf.Empty) returns (stream ProtoWeatherForecast);

}

message ProtoWeatherForecastResponse {
  repeated ProtoWeatherForecast forecasts = 1;
}

message ProtoWeatherForecast {
  google.protobuf.Timestamp dateTimeStamp = 1;
  int32 temperatureC = 2;
  string summary = 3;
}